fix flex wrap in image gallery

--- a/pages/gallery/index.module.css
+++ b/pages/gallery/index.module.css
@@ -1,3 +1,12 @@
+.preview {
+  margin: 2rem;
+  height: 10rem;
+  width: 20rem;
+  background: var(--background-color);
+  position: relative;
+  cursor: pointer;
+}
+
 .navigation {
   position: absolute;
   top: 20%;
